--- a/src/components/Main/Promo/Promo.scss
+++ b/src/components/Main/Promo/Promo.scss
@@ -30,6 +30,7 @@
     }
     &__logo {
       width: $tab-screen-w;
+      align-self: center;
     }
   }
 }
